// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mass-actions-panel Renders \`mass-actions-panel\` with empty items 1`] = `
<div
  class="shared-actions-panel"
>
  <button
    class="action-ack"
  >
    Ack|check|ack
  </button>
  <button
    class="action-fastAck"
  >
    Fast ack|done_all|fastAck
  </button>
  <button
    class="action-createManualMetaAlarm"
  >
    Manual meta alarm management|center_focus_strong|createManualMetaAlarm
  </button>
</div>
`;

exports[`mass-actions-panel Renders \`mass-actions-panel\` with meta ack 1`] = `
<div
  class="shared-actions-panel"
>
  <button
    class="action-pbehaviorAdd"
  >
    Periodical behavior|pause|pbehaviorAdd
  </button>
  <button
    class="action-ack"
  >
    Ack|check|ack
  </button>
  <button
    class="action-fastAck"
  >
    Fast ack|done_all|fastAck
  </button>
  <button
    class="action-ackRemove"
  >
    Cancel ack|remove_done|ackRemove
  </button>
  <button
    class="action-cancel"
  >
    Cancel alarm|$vuetify.icons.list_delete|cancel
  </button>
  <button
    class="action-fastCancel"
  >
    Fast cancel|delete|fastCancel
  </button>
  <button
    class="action-comment"
  >
    Comment|comment|comment
  </button>
  <button
    class="action-declareTicket"
  >
    Declare ticket|note_add|declareTicket
  </button>
  <button
    class="action-associateTicket"
  >
    Associate ticket|$vuetify.icons.sticky_note_2|associateTicket
  </button>
  <button
    class="action-snooze"
  >
    Snooze alarm|alarm|snooze
  </button>
  <button
    class="action-createManualMetaAlarm"
  >
    Manual meta alarm management|center_focus_strong|createManualMetaAlarm
  </button>
</div>
`;

exports[`mass-actions-panel Renders \`mass-actions-panel\` with meta alarm 1`] = `
<div
  class="shared-actions-panel"
>
  <button
    class="action-pbehaviorAdd"
  >
    Periodical behavior|pause|pbehaviorAdd
  </button>
  <button
    class="action-ack"
  >
    Ack|check|ack
  </button>
  <button
    class="action-fastAck"
  >
    Fast ack|done_all|fastAck
  </button>
  <button
    class="action-cancel"
  >
    Cancel alarm|$vuetify.icons.list_delete|cancel
  </button>
  <button
    class="action-fastCancel"
  >
    Fast cancel|delete|fastCancel
  </button>
  <button
    class="action-comment"
  >
    Comment|comment|comment
  </button>
  <button
    class="action-declareTicket"
  >
    Declare ticket|note_add|declareTicket
  </button>
  <button
    class="action-associateTicket"
  >
    Associate ticket|$vuetify.icons.sticky_note_2|associateTicket
  </button>
  <button
    class="action-snooze"
  >
    Snooze alarm|alarm|snooze
  </button>
  <button
    class="action-createManualMetaAlarm"
  >
    Manual meta alarm management|center_focus_strong|createManualMetaAlarm
  </button>
</div>
`;

exports[`mass-actions-panel Renders \`mass-actions-panel\` with non empty items 1`] = `
<div
  class="shared-actions-panel"
>
  <button
    class="action-pbehaviorAdd"
  >
    Periodical behavior|pause|pbehaviorAdd
  </button>
  <button
    class="action-ack"
  >
    Ack|check|ack
  </button>
  <button
    class="action-fastAck"
  >
    Fast ack|done_all|fastAck
  </button>
  <button
    class="action-cancel"
  >
    Cancel alarm|$vuetify.icons.list_delete|cancel
  </button>
  <button
    class="action-fastCancel"
  >
    Fast cancel|delete|fastCancel
  </button>
  <button
    class="action-comment"
  >
    Comment|comment|comment
  </button>
  <button
    class="action-declareTicket"
  >
    Declare ticket|note_add|declareTicket
  </button>
  <button
    class="action-associateTicket"
  >
    Associate ticket|$vuetify.icons.sticky_note_2|associateTicket
  </button>
  <button
    class="action-snooze"
  >
    Snooze alarm|alarm|snooze
  </button>
  <button
    class="action-createManualMetaAlarm"
  >
    Manual meta alarm management|center_focus_strong|createManualMetaAlarm
  </button>
</div>
`;

exports[`mass-actions-panel Renders \`mass-actions-panel\` with one item 1`] = `
<div
  class="shared-actions-panel"
>
  <button
    class="action-pbehaviorAdd"
  >
    Periodical behavior|pause|pbehaviorAdd
  </button>
  <button
    class="action-ack"
  >
    Ack|check|ack
  </button>
  <button
    class="action-fastAck"
  >
    Fast ack|done_all|fastAck
  </button>
  <button
    class="action-cancel"
  >
    Cancel alarm|$vuetify.icons.list_delete|cancel
  </button>
  <button
    class="action-fastCancel"
  >
    Fast cancel|delete|fastCancel
  </button>
  <button
    class="action-comment"
  >
    Comment|comment|comment
  </button>
  <button
    class="action-declareTicket"
  >
    Declare ticket|note_add|declareTicket
  </button>
  <button
    class="action-associateTicket"
  >
    Associate ticket|$vuetify.icons.sticky_note_2|associateTicket
  </button>
  <button
    class="action-snooze"
  >
    Snooze alarm|alarm|snooze
  </button>
  <button
    class="action-createManualMetaAlarm"
  >
    Manual meta alarm management|center_focus_strong|createManualMetaAlarm
  </button>
  <button
    class="action-rule_id..with rule id"
  >
    Follow the link "with rule id"||rule_id..with rule id
  </button>
</div>
`;
